# django

./: db.sqlite3  pyproject.toml
api/: models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_ingredient_name_recipe_description_recipe_directions_and_more.py  0003_remove_recipe_ingredients_delete_ingredient_and_more.py
myproject/: settings.py
